Fixed the width of the 3rd page text on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -149,7 +149,7 @@ body {
 }
 
 #page3LongTextWrapperDiv {
-    width: 83%;
+    width: 100%;
 }
 
 #page5SecondDiv {
